<resources>
    <string name="app_name">LabelAlbum</string>
    <string name="label_album">标签相册</string>
    <string name="normal_album">普通相册</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="recognition">识别</string>
    <string name="edit_label">编辑标签</string>
    <string name="all">全部</string>
    <string name="image_count_format">%s张</string>
    <string name="image_date_fromat">yyyy年MM月dd日</string>

    <string name="album_share_element_name">asen</string>

    <string name="album_name">相册名称：</string>
    <string name="selected_label">已选择标签：</string>
    <string name="not_select_label">未选择标签：</string>

    <string name="add_album">添加相册</string>
    <string name="edit_album">编辑相册</string>
    <string name="add_label">添加标签</string>
    <string name="label_name">标签名称：</string>
    <string name="cacel">取消</string>
    <string name="ok">确定</string>
    <string name="demo">示例相册</string>
</resources>
