<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   >

    <com.zhy.autolayout.AutoLinearLayout
        android:background="?attr/colorPrimary"
        android:layout_width="400px"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_recognition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="20px">

            <ImageView
                android:layout_width="50px"
                android:layout_height="50px"
                android:layout_centerVertical="true"
                android:layout_marginRight="32px"
                android:src="@mipmap/ic_change_history_white_36dp"
                app:layout_auto_baseheight="width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/recognition"
                android:textColor="#fff"
                android:textSize="32px" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="20px">

            <ImageView
                android:layout_width="50px"
                android:layout_height="50px"
                android:layout_centerVertical="true"
                android:layout_marginRight="32px"
                android:src="@mipmap/ic_mode_edit_white_36dp"
                app:layout_auto_baseheight="width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit"
                android:textColor="#fff"
                android:textSize="32px" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="20px">

            <ImageView
                android:layout_width="50px"
                android:layout_height="50px"
                android:layout_centerVertical="true"
                android:layout_marginRight="32px"
                android:src="@mipmap/ic_open_in_new_white_36dp"
                app:layout_auto_baseheight="width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/share"
                android:textColor="#fff"
                android:textSize="32px" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="20px">

            <ImageView
                android:layout_width="50px"
                android:layout_height="50px"
                android:layout_centerVertical="true"
                android:layout_marginRight="32px"
                android:src="@mipmap/ic_delete_white_36dp"
                app:layout_auto_baseheight="width" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delete"
                android:textColor="#fff"
                android:textSize="32px" />
        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoFrameLayout>